Fix spacing

--- a/src/app/components/common/Banner.css
+++ b/src/app/components/common/Banner.css
@@ -5,7 +5,8 @@
 
 .description-container {
   text-align: center;
-  margin-bottom: 30px;
+  margin-top: -3px;
+  margin-bottom: 28px;
 }
 
 .name {
