--- a/src/app/components/common/Grid.css
+++ b/src/app/components/common/Grid.css
@@ -1,3 +1,7 @@
+.grid-container {
+  margin-top: 30px;
+}
+
 .grid-row {
   margin-left: 60px;
   margin-right: 60px;
